objects/ALTF__Account_Objective__c.object
<CustomObject>
    <fields>
        <fullName>ALTF__Account_Division__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Account Division</label>
        <referenceTo>ALTF__Account_Division__c</referenceTo>
        <relationshipLabel>Altify Account Objectives</relationshipLabel>
        <relationshipName>Altify_Account_Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Account__c</fullName>
        <description>Reference to the Account for the Objective</description>
        <inlineHelpText>Reference to the Account for the Objective</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Altify Objectives</relationshipLabel>
        <relationshipName>AM_Objectives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Due_Date__c</fullName>
        <description>Due Date</description>
        <inlineHelpText>The date you expect to achieve the Objective.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ALTF__IsCompleted__c</fullName>
        <description>IsCompleted is true if Status == &apos;Completed - Achieved&apos; OR Status == &apos;Completed - Not Achieved&apos;, false otherwise</description>
        <formula>ISPICKVAL(ALTF__Status__c, &apos;Achieved&apos;) || ISPICKVAL(ALTF__Status__c, &apos;Cancelled&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>IsCompleted is true if Status == &apos;Completed - Achieved&apos; OR Status == &apos;Completed - Not Achieved&apos;, false otherwise</inlineHelpText>
        <label>IsCompleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__IsOverdue__c</fullName>
        <description>true if status != completed and due date &lt; today, false otherwise</description>
        <formula>NOT(ALTF__IsCompleted__c) &amp;&amp; (ALTF__Due_Date__c &lt; TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>true if status != completed and due date &lt; today, false otherwise</inlineHelpText>
        <label>IsOverdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Is_Default_Objective__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default Objective</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Metric__c</fullName>
        <description>Metric</description>
        <inlineHelpText>The measurable metric(s) that will indicate you have achieved the Objective or the measurable results of achieving the Objective. For example, &quot;$5M in pipeline&quot;, or &quot;unlimited access to the SVP(include the names)&quot;, or &quot;$2M in revenue&quot;.</inlineHelpText>
        <label>Metric</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ALTF__Objective_Description__c</fullName>
        <inlineHelpText>The value this objective delivers to others. How is this Objective relevant to the customer, or how is it relevant to the partner if this is a Partner Objective, or relevant to you if this is a Customer Success Objective.</inlineHelpText>
        <label>Objective Description</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ALTF__Order__c</fullName>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Overdue_Status__c</fullName>
        <formula>IF (
                ALTF__Due_Date__c &lt; TODAY(), 
                CASE(
                    ALTF__Status__c, 
                    &apos;Not Started&apos; , &apos;Overdue&apos;, 
                    &apos;In Progress&apos;, &apos;Overdue&apos;, 
                    Text(ALTF__Status__c)
                ), 
                Text(ALTF__Status__c)
            )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AM_Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Priority__c</fullName>
        <description>Priority</description>
        <inlineHelpText>Priority</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <default>true</default>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Status__c</fullName>
        <description>Status</description>
        <inlineHelpText>Status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Achieved</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Strategy__c</fullName>
        <inlineHelpText>How you plan to achieve the objective. A description of your high level approach to achieving the Objective. For example, &quot;by leveraging relationships and references in the industry&quot;</inlineHelpText>
        <label>Strategy</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ALTF__Subject__c</fullName>
        <description>Objective Subject</description>
        <inlineHelpText>Specify the Objective by providing a description of what you want to accomplish as it relates to the Objective Type. For example, &quot;grow the pipeline&quot;, or &quot;improve relationship with key players (be specific and use the names of the Key Players)&quot;, or &quot;</inlineHelpText>
        <label>Subject</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Type__c</fullName>
        <inlineHelpText>Using the drop down list, select what type of Objective you are adding.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Research</fullName>
                    <default>true</default>
                    <label>Research</label>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Revenue</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Customer Success</fullName>
                </value>
                <value>
                    <fullName>Remove Barrier</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Altify Account Objective</label>
    <nameField>
        <label>Objective Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Account Objectives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>